--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,9 @@
 name: CI
 on:
   pull_request:
-    paths-ignore:
-      - README.md
+    branches: main
   push:
     branches: main
-    paths-ignore:
-      - README.md
 
 jobs:
   test:
@@ -16,44 +13,17 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          components: rustfmt, clippy
 
-      - name: Run cargo test with no default features
+      - name: Check formatting
+        run: cargo fmt --all -- --check`
+
+      - name: Run clippy
+        run: cargo clippy --all-targets --all-features
         env:
-          CARGO_INCREMENTAL: 0
-          RUSTFLAGS: -D warnings
-        run: cargo test --no-default-features
+          RUSTFLAGS: "-D warnings"
 
-      - name: Run cargo test with all features enabled
-        env:
-          CARGO_INCREMENTAL: 0
-          RUSTFLAGS: -D warnings
-        run: cargo test --all-features
-  rustfmt:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout sources
-        uses: actions/checkout@v1
-
-      - name: Install stable toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: stable
-          components: rustfmt
-
-      - name: Run cargo fmt
-        uses: actions-rs/cargo@v1
-        with:
-          command: fmt
-          args: --all -- --check
-  clippy:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-      - uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: stable
-          components: clippy
-      - run: cargo clippy --all-features -- -D warnings
+      - name: Run tests
+        run: cargo test --all
